--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Rikiki</string>
+    <string name="main_menu_title">Rikiki Pontszámláló</string>
+    <string name="new_game">Új játék</string>
+    <string name="game_settings">Játék beállítások</string>
 </resources>
